[package]
authors = ["The Nushell Project Developers"]
default-run = "nu"
description = "A new type of shell"
documentation = "https://www.nushell.sh/book/"
edition = "2018"
exclude = ["images"]
homepage = "https://www.nushell.sh"
license = "MIT"
name = "nu"
readme = "README.md"
repository = "https://github.com/nushell/nushell"
rust-version = "1.60"
version = "0.66.2"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
crossterm = "0.23.0"
ctrlc = "3.2.1"
log = "0.4"
miette = "5.1.0"
nu-ansi-term = "0.46.0"
nu-cli = { version = "0.66.2"  }
nu-color-config = { version = "0.66.2"  }
#nu-command = { version = "0.66.3"  }
nu-command = { path="../nu_iox", version = "0.66.3"  }
nu-engine = { version = "0.66.2"  }
nu-json = { version = "0.66.2"  }
nu-parser = { version = "0.66.2"  }
nu-path = { version = "0.66.2"  }
nu-plugin = { optional = true, version = "0.66.2"  }
nu-pretty-hex = { version = "0.66.2"  }
nu-protocol = { version = "0.66.2"  }
nu-system = { version = "0.66.2" }
nu-table = { version = "0.66.2"  }
nu-term-grid = { version = "0.66.2"  }
nu-utils = { version = "0.66.2"  }
reedline = { version = "0.9.0", features = ["bashisms", "sqlite"]}
pretty_env_logger = "0.4.0"
rayon = "1.5.1"
is_executable = "1.0.1"

[target.'cfg(not(target_os = "windows"))'.dependencies]
# Our dependencies don't use OpenSSL on Windows
openssl = { version = "0.10.38", features = ["vendored"], optional = true }
signal-hook = { version = "0.3.14", default-features = false }

[dev-dependencies]
nu-test-support = { version = "0.66.2"  }
tempfile = "3.2.0"
assert_cmd = "2.0.2"
pretty_assertions = "1.0.0"
serial_test = "0.8.0"
hamcrest2 = "0.3.0"
rstest = "0.15.0"
itertools = "0.10.3"

# Main nu binary
[[bin]]
name = "nu"
path = "src/main.rs"
